# leverage_agent

./: .env.example  .gitignore  ANCHOR_STRATEGY_COMPLETE.md  BUILD_AND_DISTRIBUTION.md  DYNAMIC_PROMPT_IMPLEMENTATION.md  Makefile  PHASE2_MCP_REGISTRATION.md  README.md  REFACTORING_GUIDE.md  SKILLS_MCP_DIAGNOSTIC.md  TEST_CONNECTION_FEATURE.md  UV_MIGRATION_GUIDE.md  backend-package.json  chatbot.sh  cline_mcp_settings.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  test-anchor-strategy.sh  test-dynamic-prompt.cjs  test-justTrade-exploration.cjs  tsup.config.ts  verify-skills-mcp.cjs
.claude/skills/confluence-workflow/: SKILL.md
.claude/skills/jira-workflow/: SKILL.md
.claude/skills/trading-context/: SKILL.md
.github/workflows/: build.yml  release.yml
docs/: ATLASSIAN_MCP_SERVER.md  FILESYSTEM_MCP_SERVER.md  OCI_MCP_SERVER.md
electron-app/: RESTART_INSTRUCTIONS.md  package-lock.json  package.json
electron-app/src/backend/: agent-client.js  chatbot.js  config.js  persistent-agent.js
electron-app/src/main/: main.js
electron-app/src/renderer/: app.ts  index.html  renderer.js  settings.html  styles.css
electron-app/src/renderer/modules/chat/: MessageRenderer.ts
electron-app/src/renderer/modules/markdown/: MarkdownRenderer.ts
electron-app/src/renderer/modules/settings/: AIProviderSettings.ts  CodeRepoManager.ts  MCPServerManager.ts  SettingsModal.ts  SkillsManager.ts
electron-app/src/renderer/services/: IPCService.ts
mcp-server/: .env.example  README.md  requirements.txt  server.py
mcp-server/atlassian_mcp/: __init__.py  config.py  confluence_client.py  confluence_tools.py  jira_client.py  jira_tools.py
scripts/: test-auth.js
src/: agent_sdk.py  config.py  main.py
src/agent/: agent-sdk.ts  anchor-files.ts  filesystem-tools.ts  index.ts  makefile-analyzer.ts  mcp-client.ts  smart-exploration.ts  types.ts
src/api/: oci-client.ts
src/cli/: index.ts  interactive.ts
src/config/: index.ts  schema.ts
src/mcp/: atlassian-server.ts  atlassian-types.ts
src/mcp/tools/: confluence-tools.ts  jira-tools.ts
src/providers/: __init__.py  base.py  base.ts  claude-provider.ts  claude_provider.py  factory.ts  index.ts  oci-openai-provider.ts  openai_provider.py  types.ts
